todo-app/templates/frontend-service.yaml
apiVersion: v1 
kind: Service

metadata:
  name: todo-frontend

spec:
  selector:
    app: todo-frontend

  ports:
    - port: 80
      targetPort: 80
  
  type: ClusterIP
