todo-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - todo.app.com
      secretName: todo-tls-secret
  rules:
    - host: todo.app.com

      http:
        paths:
          - path: /api 
            pathType: Prefix 

            backend:
              service:
                name: todo-gateway
                port:
                  number: 5000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: todo-gateway
                port:
                  number: 5000
                
          - path: /
            pathType: Prefix

            backend:
              service:
                name: todo-frontend
                port:
                  number: 80
          
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
